# ayed_taller_estructuras_lineales

./: CMakeLists.txt  README.md  main.cpp
include/: Cola.hpp  Inventario.hpp  Recurso.hpp  Vector.hpp
src/: Cola.cpp  Inventario.cpp  Recurso.cpp  Vector.cpp
